Compiler/antlr/test_cases/semantic_errors/err2_type.tiger
main let
   var a : int := 0;
   var b : int := 7;
   var i : int := 0;
in begin
   a := b[i];
end
